# pattern-hs

./: .gitignore  .gitmodules  CANONICAL-JSON-ALIGNMENT.md  CLAUDE.md  DESIGN.md  JSON-SCHEMA-DECISION.md  README.md  TODO-later.md  TODO.md  cabal.project  pattern.cabal  subject.plan.md
.cursor/rules/: specify-rules.mdc
.github/: copilot-instructions.md
.github/workflows/: haddock.yml  haskell.yml
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
apps/gramref-cli/: gramref-cli.cabal
apps/gramref-cli/man/: gramref.1
apps/gramref-cli/src/Gramref/CLI/: JSON.hs  Output.hs
apps/gramref-cli/src/Gramref/CLI/Commands/: Convert.hs  Generate.hs  Match.hs  Parse.hs  Schema.hs  Transform.hs
apps/gramref-cli/tests/Spec/CLI/: ConvertSpec.hs  JSONSpec.hs  OutputSpec.hs
apps/gramref-cli/tests/Spec/Properties/: DeterministicSpec.hs
design/: DESIGN.md  EXTENDED-SEMANTICS.md  SEMANTICS.md  gram-hs-cli-plan.md  graph-lens.md  graph-pattern-equivalents.md  pattern-matching-dsl-design.md
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
docs/: README.md
docs/guide/: 01-introduction.md  02-basic-concepts.md  03-construction.md  04-basic-operations.md  05-typeclass-instances.md  06-advanced-morphisms.md  07-use-cases.md  08-gram-notation-reference.md  pattern-graph-usage.md
docs/reference/: CANONICAL-JSON-ALIGNMENT.md  PORTING-GUIDE.md  SPECIFICATION.md  graph-gram-notation.md
examples/: examples.md
libs/gram/: CHANGELOG.md  LICENSE  TODO.md  gram.cabal
libs/gram/src/: Gram.hs
libs/gram/src/Gram/: CST.hs  JSON.hs  Parse.hs  Serialize.hs  Transform.hs  Validate.hs
libs/gram/src/Gram/Schema/: JSONSchema.hs  Rust.hs  TypeScript.hs
libs/gram/test-data/: SYNTAX_NOTES.md
libs/gram/test-data/roundtrip/custom/: anonymous-subject.gram  deep-nesting.gram  empty-labels.gram  empty-properties.gram
libs/gram/tests/: SemanticsSpec.hs  Test.hs
libs/gram/tests/Spec/Gram/: CorpusSpec.hs  ParseMinimalRepro.hs  ParseRangeRepro.hs  ParseSpec.hs  RoundtripSpec.hs  SchemaSpec.hs  SerializeSpec.hs
libs/pattern/: CHANGELOG.md  pattern.cabal
libs/subject/: CHANGELOG.md  LICENSE  subject.cabal
libs/subject/examples/: examples.md
libs/subject/src/: Subject.hs
libs/subject/src/Subject/: Construction.hs  Core.hs  Value.hs
libs/subject/tests/: Test.hs
libs/subject/tests/Spec/Subject/: CoreSpec.hs  ValueSpec.hs
proposals/: graph-classifier.md  graph-mutation.md  graph-query.md  graph-transform.md  graph-value-instances.md  pattern-equivalence.md  pattern-graph.md  pattern-reconciliation.md  pipeline-scenarios.md  representation-map-proposal.md  scope-unification-proposal.md
proposals/design/: DESIGN.md  EXTENDED-SEMANTICS.md  README.md  RFC-001-frames-and-spans.md  RFC-001-strata-and-aspects.md  RFC-002-pattern-container-substrate.md  RFC-003-gram-notation-semantics.md  RFC-004-graph-classifier.md  RFC-005-graph-query.md  RFC-006-scope-unification.md  RFC-007-representation-map.md  RFC-008-graph-transform.md  RFC-009-graph-mutation.md  RFC-010-pattern-reconciliation.md  SEMANTICS.md  gram-hs-cli-improvements.md  graph-lens.md  pattern-basic-aspects-review.md  pattern-category.md  pattern-matching-dsl-design.md
scripts/: README.md  ci-check.sh  init-submodules.sh
specs/001-pattern-data-structure/: data-model.md  plan.md  quickstart.md
specs/002-basic-pattern-type/: data-model.md  phase6-validation.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-pattern-structure-review/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-construction-functions/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-functor-instance/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-foldable-instance/: plan.md  spec.md  tasks.md
specs/007-traversable-instance/: plan.md  tasks.md
specs/008-basic-query-functions/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-ord-instance/: plan.md  tasks.md
specs/010-semigroup-instance/: plan.md
specs/011-monoid-instance/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-hashable-instance/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-predicate-matching/: plan.md
specs/013-applicative-instance/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-comonad-instance/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-gram-serialization/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/015-integration-polish/: plan.md  tasks.md
specs/017-gram-serializer-updates/: plan.md
specs/018-pattern-path-semantics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/019-integration-polish/: data-model.md  plan.md  quickstart.md
specs/020-subject-serialization/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/021-gram-serialization-update/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/022-cli-improvements/: spec.md
specs/022-documentation-reorganization/: spec.md
specs/022-graph-lens-review/: analysis.md  decision.md  spec.md  tasks.md
specs/023-graph-lens/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/024-codefence-strings/: plan.md  tasks.md
specs/025-decouple-identity-assignment/: tasks.md
specs/026-pattern-documentation/: plan.md  quickstart.md
specs/027-docs-reorganization/: spec.md
specs/028-paramorphism-folding/: plan.md  tasks.md
specs/029-canonical-json-pattern/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/030-separate-container-content-parsing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/031-pattern-reconciliation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/032-gram-annotation-syntax/: data-model.md  plan.md  (+4 more)
(+141 files in other folders)
