cabal-version:      2.4
name:               pattern
version:            0.1.0.0

synopsis:           A recursive, decorated sequence data structure
description:        
    Pattern is a recursive data structure that pairs a sequence with a value.
    The sequence is the pattern itself. The value decorates the sequence with
    additional information. The sequence elements are themselves patterns,
    which allows for arbitrary nesting and complexity.
    This is a reference implementation designed to be
    translatable to other languages while maintaining category-theoretic
    correctness.

license:            BSD-3-Clause
license-file:       LICENSE
author:             Pattern HS
maintainer:         pattern@example.com
category:           Data
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Pattern
        Pattern.Core
        Pattern.Views
        Pattern.Graph
        Pattern.Morphisms

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    build-depends:
        base >=4.17.0.0 && <5,
        containers ^>=0.6

    hs-source-dirs:   src
    default-language: Haskell2010

test-suite pattern-test
    type:                exitcode-stdio-1.0
    main-is:             Test.hs
    other-modules:
        Spec.Pattern.CoreSpec
        Spec.Pattern.ViewsSpec
        Spec.Pattern.GraphSpec
        Spec.Pattern.Properties

    build-depends:
        base >=4.17.0.0 && <5,
        pattern,
        containers ^>=0.6,
        QuickCheck ^>=2.14,
        hspec ^>=2.11,
        mtl ^>=2.3

    hs-source-dirs:   tests
    default-language: Haskell2010
